--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <div class="row d-flex align-items-center">
       <div class="col">
         <h1>Hello, I'm Vivi! </h1>
-        <p>I am a student who likes to code websites for fun I guess boogsh</p>
+        <p>I am a BS Information Technology student who likes to code and chill, and I also enjoy designing website layouts.</p>
         <button type="button" class="btn btn-outline-dark" id="see-projects-btn" onclick="toggleAboutMe()">See My Projects</button>
       </div>
       <div class="col text-center">
