--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           <div class="card-body">
             <h5 class="card-title">Registration Form</h5>
             <p class="card-text">Form that accepts user input and prints the output.</p>
-            <a href="http://127.0.0.1:5500/registration%20form.html" class="btn btn-dark">See project</a>
+            <a href="registration form.html" class="btn btn-dark">See project</a> 
           </div>
         </div>
       </div>
