--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div class="card-body">
             <h5 class="card-title">Calculator</h5>
             <p class="card-text">An input form that will calculate students' grades. Focuses on the use of JavaScript.</p>
-            <a href="http://127.0.0.1:5500/js%20calculator.html" class="btn btn-dark">See project</a>
+            <a href="/final-project-cit14/js-calculator" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
           <div class="card-body">
             <h5 class="card-title">Midterm Exam: Validation</h5>
             <p class="card-text">Adding events whenever user inputs the required text.</p>
-            <a href="http://127.0.0.1:5500/input%20form%20validation.html" class="btn btn-dark">See project</a>
+            <a href="/final-project-cit14/input-form-validation" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
           <div class="card-body">
             <h5 class="card-title">Progress Bar</h5>
             <p class="card-text">Use of Bootstrap and adding events using JS.</p>
-            <a href="http://127.0.0.1:5500/progress%20bar.html" class="btn btn-dark">See project</a>
+            <a href="/final-project-cit14/progress-bar" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
           <div class="card-body">
             <h5 class="card-title">Records</h5>
             <p class="card-text">A website that accepts user input and appends them to a table. jQuery and Bootstrap are used.</p>
-            <a href="http://127.0.0.1:5500/records.html" class="btn btn-dark">See project</a>
+            <a href="/final-project-cit14/records" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
           <div class="card-body">
             <h5 class="card-title">Registration Form</h5>
             <p class="card-text">Form that accepts user input and prints the output.</p>
-            <a href="registration form.html" class="btn btn-dark">See project</a> 
+            <a href=“registration form.html” onclick=“window.open(‘registration form.html’, ‘_self’);” class="btn btn-dark">See project</a> 
           </div>
         </div>
       </div>
