--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <div class="card-body">
             <h5 class="card-title">Learning Contract</h5>
             <p class="card-text">A website that introduces me.</p>
-            <a href="/final-project-cit14/learning-contract.html" class="btn btn-dark">See project</a>
+            <a href="learning contract.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
