--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="card-body">
             <h5 class="card-title">Webpage: Poem</h5>
             <p class="card-text">A website to practice CSS Styling.</p>
-            <a href="/final-project-cit14/webpage.html" class="btn btn-dark">See project</a>
+            <a href="webpage.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
           <div class="card-body">
             <h5 class="card-title">Mockup Website 1</h5>
             <p class="card-text">A group project that converts a mockup idea to a website.</p>
-            <a href="/final-project-cit14/Mockup-Website.html" class="btn btn-dark">See project</a>
+            <a href="Mockup Website.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -121,7 +121,7 @@
           <div class="card-body">
             <h5 class="card-title">Mockup Website 2</h5>
             <p class="card-text">Another website that converts a mockup idea to a website, with the theme of Tourism.</p>
-            <a href="/final-project-cit14/mockup-website-2.html" class="btn btn-dark">See project</a>
+            <a href="mockup website 2.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -130,7 +130,7 @@
           <div class="card-body">
             <h5 class="card-title">Calculator</h5>
             <p class="card-text">An input form that will calculate students' grades. Focuses on the use of JavaScript.</p>
-            <a href="/final-project-cit14/js-calculator.html" class="btn btn-dark">See project</a>
+            <a href="js calculator.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -139,7 +139,7 @@
           <div class="card-body">
             <h5 class="card-title">Midterm Exam: Validation</h5>
             <p class="card-text">Adding events whenever user inputs the required text.</p>
-            <a href="/final-project-cit14/input-form-validation.html" class="btn btn-dark">See project</a>
+            <a href="input form validation.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
           <div class="card-body">
             <h5 class="card-title">Progress Bar</h5>
             <p class="card-text">Use of Bootstrap and adding events using JS.</p>
-            <a href="/final-project-cit14/progress-bar.html" class="btn btn-dark">See project</a>
+            <a href="progress bar.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -157,7 +157,7 @@
           <div class="card-body">
             <h5 class="card-title">Records</h5>
             <p class="card-text">A website that accepts user input and appends them to a table. jQuery and Bootstrap are used.</p>
-            <a href="/final-project-cit14/records.html" class="btn btn-dark">See project</a>
+            <a href="records.html" class="btn btn-dark">See project</a>
           </div>
         </div>
       </div>
@@ -166,7 +166,7 @@
           <div class="card-body">
             <h5 class="card-title">Registration Form</h5>
             <p class="card-text">Form that accepts user input and prints the output.</p>
-            <a href="/final-project-cit14/registration-form.html" class="btn btn-dark">See project</a> 
+            <a href="registration form.html" class="btn btn-dark">See project</a> 
           </div>
         </div>
       </div>
